[package]
name = "cdrc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { git = "https://github.com/kaist-cp/crossbeam.git", rev = "f5d4a046" }
scopeguard = "1.1.0"
static_assertions = "1.1.0"
atomic = "0.5"
cfg-if = "1.0"

[dev-dependencies]
rand = "0.8"
crossbeam-utils = "0.8"
bitflags = "2.4.0"

[profile.release-with-debug]
inherits = "release"
debug = true