[package]
name = "crossbeam-cbr-epoch"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "crossbeam-epoch-X.Y.Z" git tag
edition = "2021"
version = "0.7.1"
authors = ["The Crossbeam Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-epoch"
documentation = "https://docs.rs/crossbeam-epoch"
description = "Epoch-based garbage collection"
keywords = ["lock-free", "rcu", "atomic", "garbage"]
categories = ["concurrency", "memory-management", "no-std"]

[features]
default = ["std"]
nightly = ["crossbeam-utils/nightly", "arrayvec/use_union"]
std = ["crossbeam-utils/std", "lazy_static"]
alloc = ["crossbeam-utils/alloc"]
sanitize = [] # Makes it more likely to trigger any potential data races.

[dependencies]
cfg-if = "0.1.2"
memoffset = "0.7"
static_assertions = "1.1.0"
bitflags = "1.0"
nix = "0.26.2"
setjmp = { git = "https://github.com/powergee/setjmp.rs.git" }
atomic = "0.5"

[dependencies.membarrier]
git = "https://github.com/jeehoonkang/membarrier-rs.git"
rev = "80647e6810b7e9e4545301e2b546e26c6b46b704"

[dependencies.murmur3]
git = "https://github.com/kaist-cp/murmur3.git"
rev = "06b202c65b2eec6bf6db3f6dd4a0dc39142705e4"

[dependencies.arrayvec]
version = "0.4"
default-features = false

[dependencies.crossbeam-utils]
version = "0.6"
path = "../crossbeam-utils"
package = "crossbeam-cbr-utils"
default-features = false

[dependencies.lazy_static]
version = "1"
optional = true

[dependencies.scopeguard]
version = "1"
default-features = false

[dev-dependencies]
rand = "0.6"
