[package]
name = "nbr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A concurrent garbage collector based on NBR+ (Neutralization Based Reclamation)"
repository = "https://github.com/kaist-cp/smr-benchmark"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
setjmp = { git = "https://github.com/powergee/setjmp.rs.git" }
nix = "0.26.2"
cfg-if = "1.0"
rustc-hash = "1.1.0"
atomic = "0.5"
static_assertions = "1.1.0"

[dev-dependencies]
crossbeam-utils = "0.8"
rand = "0.8"

[profile.release-with-debug]
inherits = "release"
debug = true