[package]
name = "nbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
setjmp = { git = "https://github.com/powergee/setjmp.rs.git" }
nix = "0.26.2"
cfg-if = "1.0"
rustc-hash = "1.1.0"
atomic = "0.5"
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.8"
